# docky

./: LICENSE  README.md  requirements.txt  setup.cfg
src/docky/: manage.py
src/docky/docky/: settings.py  urls.py  wsgi.py
