[metadata]
name = docky
version = 0.1
summary = Docky
description-file = README.md
author = Piotr Jarolewski
author-email = jarolewski.piotr@gmail.com
home-page = http://www.webcoding.pl
classifier =
    Environment :: Django
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = src/docky
